k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: platform-landing
spec:
  selector:
    app: platform-landing
  ports:
    - name: http
      port: 80
      targetPort: 80
  type: ClusterIP
